force-app/main/default/objects/Registration_Line_Item__c/Registration_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Registration Line Item</label>
    <nameField>
        <displayFormat>LI-{0000000}</displayFormat>
        <label>Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>