force-app/main/default/objects/Registration_Line_Item__c/fields/Event_Group_Product__c.field-meta.xml
<CustomField>
    <fullName>Event_Group_Product__c</fullName>
    <label>Event Group Product</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Group_Package__c</referenceTo>
    <relationshipLabel>Registration Line Items</relationshipLabel>
    <relationshipName>Registration_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>