force-app/main/default/objects/Registration_Line_Item__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Registration Line Items</relationshipLabel>
    <relationshipName>Registration_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>