force-app/main/default/objects/Registration_Line_Item__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>Registrations__c</referenceTo>
    <relationshipLabel>Registration Line Items</relationshipLabel>
    <relationshipName>Registration_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>