force-app/main/default/objects/Registration_Line_Item__c/recordTypes/Product_Package.recordType-meta.xml
<RecordType>
    <fullName>Product_Package</fullName>
    <active>true</active>
    <description>Product Package</description>
    <label>Product Package</label>
</RecordType>